src/objects/cspmb__Add_On_Price_Item__c.object
<CustomObject>
    <description>Describes a simple product, bolt-on, optional extra etc. which can be sold associated with a parent Price Item.</description>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Image_URL__c , &apos;&apos;,52,56)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_isVariablePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to indicate if the price mentioned in the price item, can vary on the product configuration screen. Used in BDS products like Servicepakete etc...</description>
        <label>isVariablePrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_Active_Formula__c</fullName>
        <formula>IF( cspmb__Is_Active__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
       <fullName>LG_DecompositionCriteria__c</fullName>
       <label>Decomposition Criteria</label>
       <type>Picklist</type>
       <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_DecompositionCriteria</valueSetName>
        </valueSet>
   </fields>
   <fields>
        <fullName>LG_SecondaryDecompositionCriteria__c</fullName>
        <label>Secondary Decomposition Criteria</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LG_ExternalDescription__c</fullName>
        <label>External Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExternalPriceName__c</fullName>
        <label>External Price Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ExternalServiceName__c</fullName>
        <label>External Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_LegacyProductFormula__c</fullName>
        <formula>IF(LG_LegacyProduct__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Product Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_LegacyProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ProductDefinitionType__c</fullName>
        <label>Product Definition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Numbers</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Extended Services</fullName>
                </value>
                <value>
                    <fullName>Implementation Services</fullName>
                </value>
                <value>
                    <fullName>hPBX Devices</fullName>
                </value>
                <value>
                    <fullName>BDS Standort Hardware</fullName>
                </value>
                <value>
                    <fullName>Company VPN Anywhere</fullName>
                </value>
                <value>
                    <fullName>Service Gebühren</fullName>
                </value>
                <value>
                    <fullName>Internet Service</fullName>
                </value>
                <value>
                    <fullName>hPBX Phone Numbers</fullName>
                </value>
                <value>
                    <fullName>CF Add On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>HPBX</fullName>
                </value>
                <value>
                    <fullName>PIN</fullName>
                </value>
                <value>
                    <fullName>DTV</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Connection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ProductTechnicalDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Technical Details</label>
        <referenceTo>LG_ProductTechnicalDetails__c</referenceTo>
        <relationshipLabel>Add On Price Items</relationshipLabel>
        <relationshipName>Add_On_Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Group__c</fullName>
        <globalPicklist>Add_On_Price_Item_Groups</globalPicklist>
        <label>Group</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LG_TypeOfPhoneRange__c</fullName>
        <label>Type Of Phone Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Port In</fullName>
                </value>
                <value>
                    <fullName>088</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provisioning_ID__c</fullName>
        <label>Provisioning ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_System__c</fullName>
        <description>hold the provisioning system value</description>
        <label>Provisioning System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Bandwidth__c</fullName>
        <label>UM Bandwidth</label>
        <picklist>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UM_BillingProductId__c</fullName>
        <label>Billing Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_CancellationCode__c</fullName>
        <label>Cancellation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Create_Additional_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is currently used by VW data processing. If checked, system will create additional Service Line Item on Service</description>
        <label>Create Additional Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_DoNotDecompose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if a record needs to decomposed to subscriptions and services</description>
        <label>Do Not Decompose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_JiraIssueTypeId__c</fullName>
        <label>JiraIssueTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Limits__c</fullName>
        <description>This field contains different types of limits, like data or minutes limit per add on</description>
        <label>Limits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_OTCCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this code is checked means only one time charge code is present and create recurring along with it.</description>
        <label>Only OTC Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_OneOffContractID__c</fullName>
        <label>One Off Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_AddtionalOptions__c</fullName>
        <label>Addtional Options</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UM_ParentProductType__c</fullName>
        <label>Parent Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISDN</fullName>
                </value>
                <value>
                    <fullName>SipTrunk</fullName>
                </value>
                <value>
                    <fullName>Company Internet</fullName>
                </value>
                <value>
                    <fullName>Business Mobile</fullName>
                </value>
                <value>
                    <fullName>Company Fiber</fullName>
                </value>
                <value>
                    <fullName>Wholesale Fiber</fullName>
                </value>
                <value>
                    <fullName>WLAN</fullName>
                </value>
                <value>
                    <fullName>Office Internet</fullName>
                </value>
                <value>
                    <fullName>OI 50</fullName>
                </value>
                <value>
                    <fullName>OI 150</fullName>
                </value>
                <value>
                    <fullName>OI 200</fullName>
                </value>
                <value>
                    <fullName>OI 250</fullName>
                </value>
                <value>
                    <fullName>OI 400</fullName>
                </value>
                <value>
                    <fullName>Power Spot</fullName>
                </value>
                <value>
                    <fullName>Managed Wlan Solution</fullName>
                </value>
                <value>
                    <fullName>PowerSpot II</fullName>
                </value>
                <value>
                    <fullName>City WiFi</fullName>
                </value>
                <value>
                    <fullName>OI&amp;P 50</fullName>
                </value>
                <value>
                    <fullName>OI&amp;P 150</fullName>
                </value>
                <value>
                    <fullName>OI&amp;P 200</fullName>
                </value>
                <value>
                    <fullName>OI&amp;P 250</fullName>
                </value>
                <value>
                    <fullName>OI&amp;P 400</fullName>
                </value>
                <value>
                    <fullName>CI15</fullName>
                </value>
                <value>
                    <fullName>CI25</fullName>
                </value>
                <value>
                    <fullName>CI40</fullName>
                </value>
                <value>
                    <fullName>IP Transit</fullName>
                </value>
                <value>
                    <fullName>Paid Peering</fullName>
                </value>
                <value>
                    <fullName>E-Line (P2P)</fullName>
                </value>
                <value>
                    <fullName>Dark Fiber</fullName>
                </value>
                <value>
                    <fullName>LTE Backhaul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_RecurringCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this is checked means only recurring code is present and create one time charge item.</description>
        <label>Only Recurring Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_RecurringContractID__c</fullName>
        <label>Recurring Contrac ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_SLA__c</fullName>
        <label>UM SLA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_ServiceContractId__c</fullName>
        <label>Service Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Service__c</fullName>
        <description>Company Fibre Addon Service Info</description>
        <inlineHelpText>Company Fibre Addon Service Info</inlineHelpText>
        <label>UM Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>BGP</fullName>
                </value>
                <value>
                    <fullName>Company Cloud Fiber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_State__c</fullName>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NRW</fullName>
                </value>
                <value>
                    <fullName>HSN</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>HES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_VariablePrice__c</fullName>
        <label>Variable Price</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price and Name</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksMoreServices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked and quantity is more than 1 in VW staging record, then create service equivalent to quantity</description>
        <label>Voiceworks More Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksOneOffChargeID__c</fullName>
        <label>Voiceworks One Off Charge ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksProductID__c</fullName>
        <label>Voiceworks Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_VoiceworksRecurringChargeID__c</fullName>
        <label>Voiceworks Recurring Charge ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Add On Price Items</relationshipLabel>
        <relationshipName>Add_On_Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Add_On_Price_Item_Code__c</fullName>
        <label>Add On Price Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Add_On_Price_Item_Description__c</fullName>
        <label>Add On Price Item_Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Apply_One_Off_Charge_Account_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply One-Off Charge Account Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Apply_Recurring_Charge_Account_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Recurring Charge Account Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Authorization_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization Level</label>
        <referenceTo>cspmb__Authorization_Level__c</referenceTo>
        <relationshipLabel>Add On Price Items</relationshipLabel>
        <relationshipName>Add_On_Price_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>36 Months</fullName>
                </value>
                <value>
                    <fullName>48 Months</fullName>
                </value>
                <value>
                    <fullName>60 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Current_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current version of this Add On Price Item. If blank, this record is the current version.</description>
        <inlineHelpText>The current version of this Add On Price Item. If blank, this record is the current version.</inlineHelpText>
        <label>Current Version</label>
        <referenceTo>cspmb__Add_On_Price_Item__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cspmb__Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Negative Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Authorization_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Authorization Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_One_Off_Discount_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is One-Off Discount Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__Is_Recurring_Discount_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring Discount Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge_Code__c</fullName>
        <label>One-Off Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>One-Off Charge External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Charge__c</fullName>
        <label>One-Off Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__One_Off_Cost__c</fullName>
        <label>One-Off Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Product_Definition_Name__c</fullName>
        <label>Product Definition Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Zusatzdienste</fullName>
                </value>
                <value>
                    <fullName>Dienstleistungen</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>Auslandsrufnummer</fullName>
                </value>
                <value>
                    <fullName>BDS Standort Hardware</fullName>
                </value>
                <value>
                    <fullName>Internet Service</fullName>
                </value>
                <value>
                    <fullName>Service Gebühren</fullName>
                </value>
                <value>
                    <fullName>Phone Numbers</fullName>
                </value>
                <value>
                    <fullName>CF Add On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge_Code__c</fullName>
        <label>Recurring Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Recurring Charge External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Charge__c</fullName>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Recurring_Cost__c</fullName>
        <label>Recurring Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Sequence__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the sorting order for this Add On Price Item.</description>
        <inlineHelpText>Indicates the sorting order for this Add On Price Item.</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cspmb__Version_Number__c</fullName>
        <description>The version number of this Add On Price Item.</description>
        <inlineHelpText>The version number of this Add On Price Item.</inlineHelpText>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Add On Price Item</label>
    <listViews>
        <fullName>VW_Add_Ons</fullName>
        <columns>NAME</columns>
        <columns>cspmb__Is_Active__c</columns>
        <columns>cspmb__One_Off_Charge_External_Id__c</columns>
        <columns>UM_VoiceworksOneOffChargeID__c</columns>
        <columns>cspmb__One_Off_Charge__c</columns>
        <columns>cspmb__Recurring_Charge_External_Id__c</columns>
        <columns>UM_VoiceworksRecurringChargeID__c</columns>
        <columns>cspmb__Recurring_Charge__c</columns>
        <columns>UM_VoiceworksMoreServices__c</columns>
        <columns>UM_Create_Additional_Line_Item__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cspmb__Effective_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>VW Add Ons</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>cspmb__All</fullName>
        <columns>NAME</columns>
        <columns>UM_CancellationCode__c</columns>
        <columns>UM_OTCCode__c</columns>
        <columns>UM_RecurringCode__c</columns>
        <columns>UM_VoiceworksMoreServices__c</columns>
        <columns>UM_DoNotDecompose__c</columns>
        <columns>cspmb__Product_Definition_Name__c</columns>
        <columns>cspmb__Current_Version__c</columns>
        <columns>Provisioning_System__c</columns>
        <columns>cspmb__Sequence__c</columns>
        <columns>UM_ParentProductType__c</columns>
        <columns>LG_ProductDefinitionType__c</columns>
        <columns>LG_ProductFamily__c</columns>
        <columns>UM_VoiceworksOneOffChargeID__c</columns>
        <columns>UM_VoiceworksRecurringChargeID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Add On Price Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add On Price Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>